[package]
name = "dump-heap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
elf = "0.7.4"
env_logger = "0.11.5"
flate2 = "1.0"
log = "0.4.22"
nix = { version = "0.29.0", features = ["ptrace", "mman", "uio", "process"] }
procmaps = "0.4.1"
scopeguard = "1.2.0"
serde = { version = "1.0.215", features = ["derive"] }
tempfile = "3.14.0"
tinytemplate = "1.2.1"
uuid = { version = "1.11.0", features = ["v4"] }
